syntax = "proto3";

option go_package = "github.com/poorlydefinedbehaviour/map_reduce_go/proto";

package core;

service Master {
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatReply) {}
  rpc MapTasksCompleted(MapTasksCompletedRequest) returns (MapTasksCompletedReply) {}
}

message HeartbeatRequest {
  string workerAddr = 1;  
  uint64 memoryAvailable = 3;
}

message HeartbeatReply {

}

message File {
  uint64 fileID = 1;
  uint64 sizeBytes = 2;
  string path = 3;
}

message Task {
  uint64 taskID = 1;
  repeated File outputFiles = 2;
}

message MapTasksCompletedRequest {
  string workerAddr = 1;
  repeated Task tasks = 2;
}

message MapTasksCompletedReply {

}

service Worker {
  rpc AssignMapTask(AssignMapTaskRequest) returns (AssignMapTaskReply) {}
  rpc AssignReduceTask(AssignReduceTaskRequest) returns (AssignReduceTaskReply) {}
}

message AssignMapTaskRequest {
  uint64 taskID = 1;
  uint64 fileID = 2;
  string filePath = 3;
  string script = 4;
  uint32 numberOfReduceTasks = 5;
}

message AssignMapTaskReply {

}

message AssignReduceTaskRequest {
  uint64 taskID = 1;
  repeated File files = 2;
  string script = 3;
}

message AssignReduceTaskReply {

}
